# CxxGRAV

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE  README  README.md  setup.sh
.github/workflows/: cmake-multi-platform.yml
src/: conf.h  gravity.comp  main.cpp
videos/: three-body-stars.cpp
